--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -9,21 +9,28 @@
 </head>
 <body>
   <div class="leaderboard-container">
+    <div class="navigation">
+      <a href="<%= matches_path %>" class="button">Go to Matches</a>
+    </div>
     <h1>Leaderboard</h1>
     <% @groups.each do |group| %>
-      <div class="group-card">
-        <h2>Group <%= group.name %></h2>
-        <p>Friend: <%= group.friend&.name || "No Friend Assigned" %></p>
-        <% total_points = group.total_points %>
-        <% group.teams.each do |team| %>
-          <p>
-            <%= team.name %> - <%= team.points %>
-            <%= form_with url: update_team_progress_leaderboard_path(team), method: :patch, local: true do %>
-              <%= check_box_tag :progressed, team.id, team.progressed?, onchange: 'this.form.submit();' %>
-            <% end %>
-          </p>
-        <% end %>
-        <p>Total Points: <%= total_points %></p>
+      <div class="leaderboard-card group-card">
+        <div class="leaderboard-header">
+          <h2>Group <%= group.name %></h2>
+          <p>Friend: <%= group.friend&.name || "No Friend Assigned" %></p>
+        </div>
+        <div class="team-list">
+          <% total_points = group.total_points %>
+          <% group.teams.each do |team| %>
+            <div class="team">
+              <p><%= team.name %> - <%= team.points %></p>
+              <%= form_with url: update_team_progress_leaderboard_path(team), method: :patch, local: true do %>
+                <%= check_box_tag :progressed, team.id, team.progressed?, onchange: 'this.form.submit();' %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+        <p class="total-points">Total Points: <%= total_points %></p>
       </div>
     <% end %>
   </div>
