--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,4 +1,3 @@
-<!-- app/views/matches/index.html.erb -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +10,7 @@
   <div class="matches-container">
     <div class="navigation">
       <a href="<%= leaderboard_index_path %>" class="button">Go to Leaderboard</a>
+      <a href="<%= leaderboard_path(:show) %>" class="button">Go to Leaderboard Show</a>
     </div>
     <h1>Matches</h1>
 
