--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -11,7 +11,7 @@
   <div class="leaderboard-container">
     <div class="navigation">
       <a href="<%= matches_path %>" class="button">Go to Matches</a>
-      <a href="<%= leaderboard_path(:show) %>" class="button">Go to Leaderboard Show</a>
+      <a href="<%= leaderboard_path(:show) %>" class="button">Go to Leaderboard</a>
     </div>
     <h1>Leaderboard</h1>
     <% @groups.each do |group| %>
