--- a/app/views/leaderboard/show.html.erb
+++ b/app/views/leaderboard/show.html.erb
@@ -11,7 +11,7 @@
     <h1>Leaderboard Show</h1>
     <!-- Buttons to Leaderboard Index Page and Matches Page -->
     <div class="button-container">
-      <a href="<%= leaderboard_index_path %>" class="button">Go to Leaderboard</a>
+      <a href="<%= leaderboard_index_path %>" class="button">Go to Groups</a>
       <a href="<%= matches_path %>" class="button">Go to Matches</a>
     </div>
     <table>
