--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -9,7 +9,7 @@
 <body>
   <div class="matches-container">
     <div class="navigation">
-      <a href="<%= leaderboard_index_path %>" class="button">Go to Leaderboard</a>
+      <a href="<%= leaderboard_index_path %>" class="button">Go to Groups</a>
       <a href="<%= leaderboard_path(:show) %>" class="button">Go to Leaderboard Show</a>
     </div>
     <h1>Matches</h1>
