--- a/app/assets/stylesheets/pages/_leaderboard_show.scss
+++ b/app/assets/stylesheets/pages/_leaderboard_show.scss
@@ -20,7 +20,7 @@ h1 {
   margin: 0 auto 20px;
   text-align: center;
   padding: 10px;
-  background-color: #007bff;
+  background-color: $primary-color;
   color: #fff;
   text-decoration: none;
   border-radius: 5px;
