--- a/app/assets/stylesheets/pages/_leaderboard.scss
+++ b/app/assets/stylesheets/pages/_leaderboard.scss
@@ -16,6 +16,15 @@
   padding: 15px;
 }
 
+/* Adjusted CSS for profile picture */
+.leaderboard-header img {
+  max-width: 100px; /* Set maximum width */
+  max-height: 100px; /* Set maximum height */
+  border-radius: 50%; /* Ensure the image is round */
+  margin-top: 10px; /* Adjust margin as needed */
+}
+
+
 .leaderboard-header {
   text-align: center;
 }
