--- a/app/assets/stylesheets/pages/_matches.scss
+++ b/app/assets/stylesheets/pages/_matches.scss
@@ -6,8 +6,14 @@
 .match {
   background-color: $background-color;
   color: $text-color;
-}
 
+}
+.match img {
+  max-width: 50px; /* Set maximum width */
+  max-height: 50px; /* Set maximum height */
+  border-radius: 50%; /* Ensure the image is round */
+  margin-bottom: 10px; /* Adjust margin as needed */
+}
 .navigation {
   text-align: center;
   margin-bottom: 10px;
@@ -44,7 +50,6 @@ h1 {
     margin-left: 25%;
     margin-right: 25%;
     margin-bottom: 20px;
-    padding: 10px;
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     flex-direction: column;
@@ -73,6 +78,9 @@ h1 {
 
     .match-details {
       p {
+        font-size: small;
+        display: flex;
+        justify-content: right;
         margin: 5px 0;
       }
     }
@@ -89,13 +97,25 @@ h1 {
     font-size: 1.5rem;
   }
 
-  .match {
-    .team-scores {
-      flex-direction: column;
+  .matches-list {
+    .match {
+      width: 90%;
+      margin-left: 5%;
+      margin-right: 5%;
+      .team-scores {
+        flex-direction: column;
 
-      .team-score, .winner {
-        margin-bottom: 5px;
-        width: 100%; // Adjust width for smaller screens
+        .team-score, .winner {
+          margin-bottom: 5px;
+          width: 100%; // Adjust width for smaller screens
+        }
+      }
+
+      .match-details {
+        p {
+          justify-content: center;
+          font-size: 0.9rem;
+        }
       }
     }
   }
@@ -110,14 +130,25 @@ h1 {
     font-size: 1.2rem;
   }
 
-  .match {
-    .event-summary {
-      font-size: 0.9rem;
-    }
+  .matches-list {
+    .match {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      .team-scores {
+        flex-direction: column;
 
-    .match-details {
-      p {
-        font-size: 0.9rem;
+        .team-score, .winner {
+          margin-bottom: 5px;
+          width: 100%; // Adjust width for smaller screens
+        }
+      }
+
+      .match-details {
+        p {
+          justify-content: center;
+          font-size: 0.9rem;
+        }
       }
     }
   }
