--- a/app/assets/stylesheets/pages/_matches.scss
+++ b/app/assets/stylesheets/pages/_matches.scss
@@ -9,10 +9,10 @@
 
 }
 .match img {
-  max-width: 50px; /* Set maximum width */
-  max-height: 50px; /* Set maximum height */
-  border-radius: 50%; /* Ensure the image is round */
-  margin-bottom: 10px; /* Adjust margin as needed */
+  max-width: 60%; /* Set maximum width */
+  max-height: 60%; /* Set maximum height */
+  border-radius: 40%; /* Ensure the image is round */
+  margin: 10px; /* Adjust margin as needed */
 }
 .navigation {
   text-align: center;
