--- a/app/assets/stylesheets/pages/_matches.scss
+++ b/app/assets/stylesheets/pages/_matches.scss
@@ -1,4 +1,3 @@
-// Base styles
 .matches-container {
   background-color: $background-color;
 }
@@ -6,14 +5,60 @@
 .match {
   background-color: $background-color;
   color: $text-color;
+  display: flex;
+  width: 50%; /* Adjust width as needed */
+  justify-content: center;
+  margin: 10px auto; /* Simplify margin for centering and spacing */
+  padding: 15px; /* Add padding for inner spacing */
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+}
 
-}
 .match img {
-  max-width: 60%; /* Set maximum width */
-  max-height: 60%; /* Set maximum height */
-  border-radius: 40%; /* Ensure the image is round */
-  margin: 10px; /* Adjust margin as needed */
+  max-width: 15%; /* Adjust image size as needed */
+  border-radius: 50%; /* Ensure the image is round */
+  margin-bottom: 10px; /* Adjust margin as needed */
 }
+
+.friend-name {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 1.5rem; /* Adjust font size as needed */
+  color: $primary-color;
+}
+
+.team-scores {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.team-score, .winner {
+  text-align: center;
+  width: 50%; /* Adjust width as needed */
+}
+
+.winner {
+  color: rgb(255, 97, 97);
+  font-size: 35px;
+  padding: 15px;
+}
+
+.event-summary {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.match-details {
+  p {
+    font-size: small;
+    text-align: center; /* Align center for responsiveness */
+    margin: 5px 0;
+  }
+}
+
 .navigation {
   text-align: center;
   margin-bottom: 10px;
@@ -43,113 +88,69 @@ h1 {
 
 .matches-list {
   .match {
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    height: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    flex-direction: column;
-
-    .team-scores {
-      display: flex;
-      justify-content: space-between;
-      align-items: center; // Ensures alignment in the center
-      margin-bottom: 10px;
-
-      .team-score {
-        text-align: center;
-        width: 30%; // Adjust width as needed
-      }
-
-      .winner {
-        text-align: center;
-        width: 30%; // Adjust width as needed
-      }
+    .friend-name {
+      margin-top: 10px;
     }
 
-    .event-summary {
-      margin-bottom: 10px;
-      text-align: center;
+    .team-name {
+      font-family: 'Kavoon', cursive;
+      font-size: 50px;
+      color: black;
+    }
+
+    .team-scores {
+      flex-direction: column;
+      font-family: 'Kavoon', cursive;
+      font-size: 24px; /* Adjust font size as needed */
+      color: black;
+
+      .team-score, .winner {
+        margin-bottom: 5px;
+        width: 100%;
+      }
     }
 
     .match-details {
       p {
-        font-size: small;
-        display: flex;
-        justify-content: right;
-        margin: 5px 0;
+        font-size: 0.9rem;
       }
     }
   }
 }
 
-// Media queries for responsiveness
+/* Media queries for responsiveness */
 @media (max-width: 768px) {
-  .matches-container {
-    padding: 5px;
+  .match {
+    width: 90%;
+    margin: 10px auto; /* Adjust margin for centering */
+    padding: 10px; /* Adjust padding as needed */
+  }
+
+  .team-scores {
+    .team-score, .winner {
+      width: 100%; /* Adjust width for smaller screens */
+    }
   }
 
   h1 {
     font-size: 1.5rem;
   }
-
-  .matches-list {
-    .match {
-      width: 90%;
-      margin-left: 5%;
-      margin-right: 5%;
-      .team-scores {
-        flex-direction: column;
-
-        .team-score, .winner {
-          margin-bottom: 5px;
-          width: 100%; // Adjust width for smaller screens
-        }
-      }
-
-      .match-details {
-        p {
-          justify-content: center;
-          font-size: 0.9rem;
-        }
-      }
-    }
-  }
 }
 
 @media (max-width: 480px) {
-  .matches-container {
-    padding: 5px;
+  .match {
+    width: 100%;
+    margin: 10px auto; /* Adjust margin for centering */
+    padding: 10px; /* Adjust padding as needed */
+  }
+
+  .team-scores {
+    .team-score, .winner {
+      width: 100%; /* Adjust width for smaller screens */
+    }
   }
 
   h1 {
     font-size: 1.2rem;
-  }
-
-  .matches-list {
-    .match {
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
-      .team-scores {
-        flex-direction: column;
-
-        .team-score, .winner {
-          margin-bottom: 5px;
-          width: 100%; // Adjust width for smaller screens
-        }
-      }
-
-      .match-details {
-        p {
-          justify-content: center;
-          font-size: 0.9rem;
-        }
-      }
-    }
   }
 }
