--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -10,7 +10,7 @@
     <% @groups.each do |group| %>
       <div class="leaderboard-card group-card">
         <div class="leaderboard-header">
-          <h2>Group <%= group.name %></h2>
+          <h2><%= group.name %></h2>
           <p>Friend: <%= group.friend&.name || "No Friend Assigned" %></p>
           <% if group.friend&.profile_picture_url.present? %>
       <%= image_tag(group.friend.profile_picture_url, alt: group.friend.name) %>
