--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -56,6 +56,7 @@
             <p><%= match.accessible_event_summary %></p>
           </div>
           <div class="match-details">
+            <p><strong>Stage:</strong> <%= match.stage %></p>
             <p><strong>Fixture Date - </strong> <%= match.start_time.strftime("%B %d, %Y %H:%M") %></p>
           </div>
         </div>
