--- a/app/assets/stylesheets/pages/_leaderboard.scss
+++ b/app/assets/stylesheets/pages/_leaderboard.scss
@@ -1,65 +1,50 @@
-// groups
+// leaderboard_show.scss
 
-// Basic styling for the leaderboard container
-.leaderboard-container {
-  display: flex;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    align-items: center;
-    flex-direction: column;
+/* Leaderboard container styling */
+.leaderboard-show-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-// Styling for the leaderboard title
-h1 {
+/* Styling for the leaderboard title */
+.leaderboard-show-container h1 {
   text-align: center;
   margin-bottom: 20px;
 }
 
-// Styling for the button to Leaderboard Index Page
-.button {
-  display: inline-block;
-  width: 150px;
-  margin: 0 10px 20px;
-  text-align: center;
-  padding: 10px;
-  background-color: $primary-color;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: darken($primary-color, 10%);
-  }
-}
-
-// Styling for the leaderboard table
+/* Styling for the table */
 table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
 }
 
-// Styling for table headers
+/* Styling for table headers */
 th {
   padding: 10px;
-  background-color: #f0f0f0;
+  background-color: #e43d121a;
   text-align: left;
 }
 
-// Styling for table data cells
+/* Styling for table rows */
+tbody tr {
+  background-color: #e43d122b;
+  text-align: center;
+}
+
+/* Styling for table data cells */
 td {
   padding: 10px;
   vertical-align: middle;
 }
 
-// Styling for alternating table rows
+/* Styling for alternating table rows */
 tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
+  background-color: #e43c1267;
 }
 
-// Styling for the profile pictures
+/* Styling for the profile pictures */
 .profile-picture {
   width: 50px;
   height: 50px;
@@ -68,62 +53,23 @@ tbody tr:nth-child(even) {
   vertical-align: middle;
 }
 
-// Styling for the flags
-.flag {
-  width: 32px;
-  height: 32px;
-  margin-right: 5px;
-  vertical-align: middle;
-}
-
-// Styling for the group cards
-.group-card {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  margin: 10px 0;
-  padding: 15px;
-  width: 50%;
-  background-color: #f9f9f9;
-}
-
-.leaderboard-header {
-  text-align: center;
-  margin-bottom: 15px;
-}
-
-.team-list {
-  margin-top: 15px;
-}
-
-.team {
+/* Styling for friend info cell */
+.friend-info {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  justify-content: center;
 }
 
-.progressed {
+/* Styling for the flags */
+.team-flags {
   display: flex;
-  justify-content: end;
-
-}
-
-.team p {
-  margin: 0;
-}
-
-.total-points {
-  text-align: center;
-  margin-top: 15px;
-  font-weight: bold;
-}
-
-// Styling for the checkboxes
-.progressed-checkbox {
+  align-items: center;
   margin-left: 10px;
 }
 
-.team-list h3 {
-  text-align: center;
-  margin-bottom: 10px;
+.team-flags img {
+  margin: 0 5px;
+  width: 32px;
+  height: 32px;
+  vertical-align: middle;
 }
