--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,8 +21,8 @@
 /* Nav buttons styling */
 .nav-buttons {
   display: flex;
-  justify-content: center;
-  width: 50%;
+  width: 100%;
+  justify-content: space-between;
 }
 
 /* Button styling */
@@ -33,7 +33,10 @@
   border-radius: 5px;
   transition: background-color 0.3s, transform 0.3s;
   text-align: center;
-  min-width: 100px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+
 }
 
 .button:hover,
