fixture time removed

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -45,7 +45,7 @@
           </div>
           <div class="match-details">
             <p><strong>Stage:</strong> <%= match.stage %></p>
-            <p><strong>Fixture Date - </strong> <%= match.start_time.strftime("%B %d, %Y %H:%M") %></p>
+            <p><strong>Fixture Date - </strong> <%= match.start_time.strftime("%B %d, %Y") %></p>
           </div>
         </div>
       <% end %>
