--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,24 +1,24 @@
-  <h1>Matches</h1>
+<h1>Matches</h1>
 
-  <% if @error_message %>
-    <p><%= @error_message %></p>
-  <% else %>
-    <div class="matches-list">
-      <% @matches.each do |match| %>
-        <div class="match">
-          <div class="team-scores">
-            <div class="team-score">
-              <%= image_tag(match.home_friend_profile_picture_url, alt: match.home_friend_name) if match.home_friend_profile_picture_url.present? %>
-              <div class="friend-name">
-                <%= match.home_friend_name %>
-              </div>
-              <div class="team-name">
-                <%#= image_tag(match.home_team.flag_url, alt: match.home_team.name, class: 'flag') if match.home_team.flag_url.present? %>
-                <%= match.home_team.name %>
-              </div>
-              <%= match.home_score %>
+<% if @error_message %>
+  <p><%= @error_message %></p>
+<% else %>
+  <div class="matches-list">
+    <% @matches.each do |match| %>
+      <div class="match">
+        <div class="team-scores">
+          <div class="team-score">
+            <%= image_tag(match.home_friend_profile_picture_url, alt: match.home_friend_name) if match.home_friend_profile_picture_url.present? %>
+            <div class="friend-name">
+              <%= match.home_friend_name %>
             </div>
-            <div class="winner">
+            <div class="team-name">
+              <%= match.home_team.name %>
+            </div>
+            <%= match.home_score %>
+          </div>
+          <div class="winner">
+            <% if match.status != 'MidEvent' %>
               <strong>Winner:</strong>
               <% if match.winner == "home" %>
                 <%= match.home_team.name %>
@@ -27,29 +27,28 @@
               <% else %>
                 TBC
               <% end %>
-            </div>
-            <div class="team-score">
-              <%= image_tag(match.away_friend_profile_picture_url, alt: match.away_friend_name) if match.away_friend_profile_picture_url.present? %>
-              <div class="friend-name">
-                <%= match.away_friend_name %>
-              </div>
-              <div class="team-name">
-                <%#= image_tag(match.away_team.flag_url, alt: match.away_team.name, class: 'flag') if match.away_team.flag_url.present? %>
-                 <%= match.away_team.name %>
-              </div>
-              <%= match.away_score %>
-            </div>
+            <% end %>
           </div>
-          <div class="event-summary">
-            <p><%= match.accessible_event_summary %></p>
-          </div>
-          <div class="match-details">
-            <p><strong>Stage:</strong> <%= match.stage %></p>
-            <p><strong>Fixture Date - </strong> <%= match.start_time.strftime("%B %d, %Y") %></p>
+          <div class="team-score">
+            <%= image_tag(match.away_friend_profile_picture_url, alt: match.away_friend_name) if match.away_friend_profile_picture_url.present? %>
+            <div class="friend-name">
+              <%= match.away_friend_name %>
+            </div>
+            <div class="team-name">
+              <%= match.away_team.name %>
+            </div>
+            <%= match.away_score %>
           </div>
         </div>
-      <% end %>
-    </div>
-  <% end %>
-</body>
-</html>
+        <div class="event-summary">
+          <p><%= match.accessible_event_summary %></p>
+        </div>
+        <div class="match-details">
+          <p><strong>Stage:</strong> <%= match.stage %></p>
+          <p><strong>Fixture Date:</strong> <%= match.start_time.strftime("%B %d, %Y %H:%M") %></p>
+          <p><strong>Status:</strong> <%= match.status %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% end %>
