--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,8 @@
   <body>
     <%= render 'layouts/navbar' %>
     <%= yield %>
+    <%= render 'layouts/footer'%>
+  </footer>
   </body>
+
 </html>
