--- a/app/views/leaderboard/show.html.erb
+++ b/app/views/leaderboard/show.html.erb
@@ -22,7 +22,7 @@
                 <% end %>
               </div>
             </td>
-            <td><h1><%= group.total_points %></h1></td>
+            <td><h1><%= group.total_points.to_i %></h1></td>
           </tr>
         <% end %>
       <% end %>
