--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,9 @@ footer {
   background-color: #f0f0f0;
   padding: 10px;
   text-align: center;
+  position: bottom;
+  bottom: 0;
+  width: 100%;
 }
 
 footer p {
