--- a/app/assets/stylesheets/pages/_faqs.scss
+++ b/app/assets/stylesheets/pages/_faqs.scss
@@ -1,5 +1,6 @@
 /* Example styling for the FAQ section */
 .faq-section {
+  width: 90%;
   margin-top: 20px;
   padding: 20px;
   background-color: #f9f9f9;
