--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -7,13 +7,13 @@
 
     <div class="faq-item">
       <h3>How is the competition scored?</h3>
-      <p>Out of group = 1<br>
-         W Ro16 = 1<br>
-         W QF = 1<br>
-         W SF = 1<br>
-         W BF = 1<br>
-         L F = 1<br>
-         W F = 2</p>
+      The scoring mechanism employed in this competition is a multi-faceted system designed to attribute numerical values to various stages and outcomes of the tournament. The competition spans across several stages, each contributing differently to the cumulative score of participants.
+
+Initially, teams contend within group stages, where successful progression out of the group warrants an esteemed point allocation of one unit. This initial phase sets the foundation for subsequent advancements, where triumphs in further stages—specifically the Round of 16, Quarter Finals, Semi Finals, and Bronze Finals—are equally esteemed with a single scoring unit each.
+
+A profound emphasis is placed on reaching and excelling in the tournament's ultimate stage, the Grand Final. Here, diverse outcomes—such as losses, which still encapsulate the essence of participation and effort—are accorded a single score. Contrarily, a victory in the Final, which epitomizes the pinnacle of achievement and ultimate supremacy, is revered and distinctly honored with a superior scoring allocation of two units.
+
+In essence, this complex scoring framework is meticulously crafted to reward progression, perseverance, and ultimately, the pinnacle of competitive success within the tournament's various stages, thereby reflecting the nuanced and strategic essence of the competition's scoring methodology.
     </div>
 
     <div class="faq-item">
