--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -7,13 +7,13 @@
 
     <div class="faq-item">
       <h3>How is the competition scored?</h3>
-      The scoring mechanism employed in this competition is a multi-faceted system designed to attribute numerical values to various stages and outcomes of the tournament. The competition spans across several stages, each contributing differently to the cumulative score of participants.
-
-Initially, teams contend within group stages, where successful progression out of the group warrants an esteemed point allocation of one unit. This initial phase sets the foundation for subsequent advancements, where triumphs in further stages—specifically the Round of 16, Quarter Finals, Semi Finals, and Bronze Finals—are equally esteemed with a single scoring unit each.
-
-A profound emphasis is placed on reaching and excelling in the tournament's ultimate stage, the Grand Final. Here, diverse outcomes—such as losses, which still encapsulate the essence of participation and effort—are accorded a single score. Contrarily, a victory in the Final, which epitomizes the pinnacle of achievement and ultimate supremacy, is revered and distinctly honored with a superior scoring allocation of two units.
-
-In essence, this complex scoring framework is meticulously crafted to reward progression, perseverance, and ultimately, the pinnacle of competitive success within the tournament's various stages, thereby reflecting the nuanced and strategic essence of the competition's scoring methodology.
+      The scoring system used in this competition is a detailed framework designed to assign numerical values to different stages and outcomes of the tournament. The competition unfolds across several stages, each contributing uniquely to the overall score of participants.<br>
+<br>
+Initially, teams compete in group stages, where advancing beyond the group phase earns a valued point. This initial phase sets the stage for subsequent advancements, where victories in further stages—namely the Round of 16, Quarter Finals, Semi Finals, and Bronze Finals—are equally prized with a single scoring point each.<br>
+<br>
+Significant importance is placed on reaching and excelling in the tournament's ultimate stage, the Grand Final. In this culminating phase, various outcomes—such as losses, which still acknowledge participation and effort—are credited with a single point. Conversely, a triumph in the Final, representing the peak of achievement and ultimate supremacy, is esteemed and distinctly recognized with a higher scoring allocation of two points.<br>
+<br>
+In summary, this intricate scoring framework is carefully crafted to reward progress, persistence, and ultimately, the pinnacle of competitive success across the tournament's diverse stages. It mirrors the strategic and nuanced essence of the competition's scoring methodology.
     </div>
 
     <div class="faq-item">
